[package]
name = "salmon"
version = "0.1.0"
edition = "2021"
default-run = "salmon"


[dependencies]
miette = { version = "5.10.0", features = ["fancy"] }
termcolor = "1.4.0"
thiserror = "1.0.51"


# Build Targets

[lib]
name = "salmon"
path = "src/lib.rs"

[[bin]]
name = "salmon"
path = "bin/salmon.rs"

[[example]]
name = "disassembler"
