[package]
name = "salmon"
version = "1.0.0"
edition = "2021"
default-run = "salmon"
description = "A lox implementation in rust"


[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
miette = { version = "5.10.0", features = ["fancy"] }
rustyline = "13.0.0"
termcolor = "1.4.0"
thiserror = "1.0.51"
from_u8 = { path = "./from_u8" }


# Build Targets

[lib]
name = "salmon"
path = "src/lib.rs"

[[bin]]
name = "salmon"
path = "bin/salmon.rs"

[[example]]
name = "disassembler"

[[example]]
name = "tracing"

[workspace]
members = ["from_u8"]
